# argus-agenticus

./: .gitignore  FEATURES.md  LICENSE  README.md  install.sh
.github/workflows/: release.yml
scripts/: deploy.sh
src/agents/claude/: settings.json
src/agents/cursor/: hooks.json
src/clients/gnome/argus-agenticus@darkwing4.dev/: agentsView.js  constants.js  daemonClient.js  extension.js  focusManager.js  idleMonitor.js  logger.js  metadata.json  renderer.js  stylesheet.css  windowTracker.js
src/clients/gnome/argus-agenticus@ivan.dev/: agentsView.js  daemonClient.js  extension.js  metadata.json  renderer.js  windowTracker.js
src/daemon/: Cargo.toml
src/daemon/src/: alloc_tracker.rs  connection.rs  handler.rs  lib.rs  main.rs  protocol.rs  socket.rs  state.rs  tasks.rs
src/daemon/tests/: e2e_report.rs  handler_report.rs  protocol_report.rs  state_report.rs
src/daemon/tests/common/: mod.rs
src/hooks/: events-to-socket.sh
src/service/: argus-agenticus.service
tests/e2e/: conftest.py  e2e_helpers.py  pytest.ini  run.sh  test_e2e_auto_focus.py  test_e2e_close.py  test_e2e_cursor.py  test_e2e_cursor_workspaces.py  test_e2e_focus.py  test_e2e_multi.py  test_e2e_single.py  test_e2e_stress.py
tests/gnome-extension/: conftest.py  ext_helper.py  mock_daemon.py  shell_eval.py  test_auto_focus.py  test_click.py  test_connection.py  test_cursor_ide_workspace.py  test_focus.py  test_focus_manager.py  test_idle.py  test_interaction.py  test_menu_actions.py  test_protocol.py  test_render.py  test_settings.py  test_tooltip.py  test_window_unmanaged.py
(+4 files in other folders)
