[package]
name = "argus-agenticus"
version = "0.1.0"
edition = "2021"

[features]
test-helpers = []

[dev-dependencies]
argus-agenticus = { path = ".", features = ["test-helpers"] }

[dependencies]
tokio = { version = "1.49", features = ["full"] }
serde = { version = "1.0.228", features = ["derive", "rc"] }
serde_json = "1.0.149"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
